--- a/less/main.less
+++ b/less/main.less
@@ -496,6 +496,15 @@ p {
 			}
 		}
 	}
+	.social-media {
+		.container {
+			display: flex;
+			flex-direction: column;
+		}
+		.ig-plugin {
+			margin-top: 5rem;
+		}
+	}
 	.item-bar {
 		margin-top: 0;
 		.container {
@@ -1009,6 +1018,21 @@ p {
 				}
 			}
 		}
+		.social-media {
+			.container {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+			}
+			.fb-plugin {
+				width: 320px;
+				height: 488px;
+			}
+			.ig-plugin {
+				margin-top: 0;
+				width: 320px;
+			}
+		}
 		.item-bar {
 			a {
 				width: 116.666667px;
@@ -1460,6 +1484,21 @@ p {
 				p {
 					font-size: 1.25rem;
 				}
+			}
+		}
+		.social-media {
+			.container {
+				display: flex;
+				flex-direction: row;
+				justify-content: space-between;
+			}
+			.fb-plugin {
+				width: 500px;
+				height: 597px;
+			}
+			.ig-plugin {
+				margin-top: 0;
+				width: 500px;
 			}
 		}
 		.item-bar {
