--- a/less/main.less
+++ b/less/main.less
@@ -503,6 +503,9 @@ p {
 		}
 		.ig-plugin {
 			margin-top: 5rem;
+			.instagram-media { 
+				min-width: 265px !important;
+			}
 		}
 	}
 	.item-bar {
