--- a/less/main.less
+++ b/less/main.less
@@ -501,6 +501,9 @@ p {
 			display: flex;
 			flex-direction: column;
 		}
+		.fb-plugin {
+			height: 500px;
+		}
 		.ig-plugin {
 			margin-top: 5rem;
 			.instagram-media { 
