--- a/less/main.less
+++ b/less/main.less
@@ -502,7 +502,7 @@ p {
 			flex-direction: column;
 		}
 		.fb-plugin {
-			height: 500px;
+			height: 500px !important;
 		}
 		.ig-plugin {
 			margin-top: 5rem;
@@ -1032,7 +1032,7 @@ p {
 			}
 			.fb-plugin {
 				width: 320px;
-				height: 542px;
+				height: 530px !important;
 			}
 			.ig-plugin {
 				margin-top: 0;
@@ -1500,7 +1500,6 @@ p {
 			}
 			.fb-plugin {
 				width: 500px;
-				height: 714px;
 			}
 			.ig-plugin {
 				margin-top: 0;
