--- a/less/main.less
+++ b/less/main.less
@@ -501,9 +501,6 @@ p {
 			display: flex;
 			flex-direction: column;
 		}
-		.fb-plugin {
-			height: 500px !important;
-		}
 		.ig-plugin {
 			margin-top: 5rem;
 			.instagram-media { 
@@ -1032,7 +1029,9 @@ p {
 			}
 			.fb-plugin {
 				width: 320px;
-				height: 530px !important;
+				.fb-page {
+					height: 530px !important;
+				}
 			}
 			.ig-plugin {
 				margin-top: 0;
@@ -1500,7 +1499,9 @@ p {
 			}
 			.fb-plugin {
 				width: 500px;
-				height: 700px !important;
+				.fb-page {
+					height: 700px !important;
+				}
 			}
 			.ig-plugin {
 				margin-top: 0;
