--- a/less/main.less
+++ b/less/main.less
@@ -631,7 +631,7 @@ p {
 				flex-direction: column;
 				align-items: center;
 				.index {
-					padding-top: 1.75rem;
+					padding-top: 2rem;
 				}
 			}
 			a {
@@ -1029,7 +1029,7 @@ p {
 			}
 			.fb-plugin {
 				width: 320px;
-				.fb-page {
+				iframe {
 					height: 530px !important;
 				}
 			}
@@ -1499,7 +1499,7 @@ p {
 			}
 			.fb-plugin {
 				width: 500px;
-				.fb-page {
+				iframe {
 					height: 700px !important;
 				}
 			}
