--- a/less/main.less
+++ b/less/main.less
@@ -186,6 +186,10 @@ p {
 .fixedheader {
 	display: none;
 }
+
+#fb-root {
+    display: none;
+}
       
 #content {
 	>div {
@@ -1029,9 +1033,7 @@ p {
 			}
 			.fb-plugin {
 				width: 320px;
-				iframe {
-					height: 530px !important;
-				}
+				height: 510px;
 			}
 			.ig-plugin {
 				margin-top: 0;
@@ -1499,9 +1501,7 @@ p {
 			}
 			.fb-plugin {
 				width: 500px;
-				iframe {
-					height: 700px !important;
-				}
+				height: 700px;
 			}
 			.ig-plugin {
 				margin-top: 0;
