--- a/less/main.less
+++ b/less/main.less
@@ -1033,11 +1033,13 @@ p {
 			}
 			.fb-plugin {
 				width: 320px;
-				height: 510px;
 			}
 			.ig-plugin {
 				margin-top: 0;
 				width: 320px;
+				.instagram-media { 
+					max-height: 500px !important;
+				}
 			}
 		}
 		.item-bar {
@@ -1501,11 +1503,13 @@ p {
 			}
 			.fb-plugin {
 				width: 500px;
-				height: 700px;
 			}
 			.ig-plugin {
 				margin-top: 0;
 				width: 500px;
+				.instagram-media { 
+					max-height: 500px !important;
+				}
 			}
 		}
 		.item-bar {
