--- a/less/main.less
+++ b/less/main.less
@@ -186,11 +186,7 @@ p {
 .fixedheader {
 	display: none;
 }
-
-#fb-root {
-    display: none;
-}
-      
+   
 #content {
 	>div {
 		margin-top: 7.5rem;
@@ -509,6 +505,7 @@ p {
 			margin-top: 5rem;
 			.instagram-media { 
 				min-width: 265px !important;
+				height: 700px !important;
 			}
 		}
 	}
@@ -1038,7 +1035,7 @@ p {
 				margin-top: 0;
 				width: 320px;
 				.instagram-media { 
-					max-height: 500px !important;
+					height: 700px !important;
 				}
 			}
 		}
@@ -1508,7 +1505,7 @@ p {
 				margin-top: 0;
 				width: 500px;
 				.instagram-media { 
-					max-height: 500px !important;
+					height: 700px !important;
 				}
 			}
 		}
