add index slider button

--- a/less/main.less
+++ b/less/main.less
@@ -76,6 +76,14 @@ p {
 	background-color: @color_3;
 }
 
+.swiper-button-next,.swiper-button-prev {
+	color: @color_3;
+}
+
+.swiper-button-next:after , .swiper-button-prev:after {
+	font-weight: 800;
+}
+
 .flexbox-header {
 	display: flex;
 	justify-content: space-between;
