update choose-us color

--- a/less/main.less
+++ b/less/main.less
@@ -261,33 +261,33 @@ p {
 			width: 235px;
 			.icon {
 				font-size: 4rem;	
-				color: #744333;
-				border: 4px solid #744333;
+				color: #b06427;
+				border: 4px solid #b06427;
 			}
 			.title {
-				color: #744333;
+				color: #b06427;
 			}
 		}
 		.ambience {
 			width: 235px;
 			.icon {
 				font-size: 3.75rem;
-				color: #035B71;
-				border: 4px solid #035B71;
+				color: #007da1;
+				border: 4px solid #007da1;
 			}
 			.title {
-				color: #035B71;
+				color: #007da1;
 			}
 		}
 		.coffee {
 			width: 235px;
 			.icon {
 				font-size: 3.5rem;
-				color: #691B37;
-				border: 4px solid #691B37;
+				color: #822848;
+				border: 4px solid #822848;
 			}
 			.title {
-				color: #691B37;
+				color: #822848;
 			}
 		}
 	}
@@ -417,7 +417,7 @@ p {
 				font-size: 1.25em;
 				font-weight: 800;
 				color: @color_1;
-				background-color: @color_4;
+				background-color: @color_6;
 			}
 		}
 		.border {
@@ -456,7 +456,7 @@ p {
 				font-size: 1.25em;
 				font-weight: 800;
 				color: @color_1;
-				background-color: @color_4;
+				background-color: @color_6;
 			}
 		}
 		.border {
@@ -935,7 +935,6 @@ p {
 					font-size: 1.25em;
 					font-weight: 800;
 					color: @color_1;
-					background-color: @color_4;
 				}
 			}
 			.border {
@@ -989,7 +988,6 @@ p {
 					font-size: 1.25em;
 					font-weight: 800;
 					color: @color_1;
-					background-color: @color_4;
 				}
 			}
 			.border {
@@ -1203,8 +1201,8 @@ p {
 				&:hover {
 					.icon {
 						color: #ffffff;
-						background-color: #744333;
-						border: 4px solid #744333;
+						background-color: #b06427;
+						border: 4px solid #b06427;
 					}
 				}
 			}
@@ -1213,8 +1211,8 @@ p {
 				&:hover {
 					.icon {
 						color: #ffffff;
-						background-color: #035B71;
-						border: 4px solid #035B71;
+						background-color: #007da1;
+						border: 4px solid #007da1;
 					}
 				}
 			}
@@ -1223,8 +1221,8 @@ p {
 				&:hover {
 					.icon {
 						color: #ffffff;
-						background-color: #691B37;
-						border: 4px solid #691B37;
+						background-color: #822848;
+						border: 4px solid #822848;
 					}
 				}
 			}
@@ -1382,7 +1380,6 @@ p {
 					font-size: 1.25em;
 					font-weight: 800;
 					color: @color_1;
-					background-color: @color_4;
 					&:hover {
 						background-color: @color_1;
 						color: @color_4;
@@ -1441,7 +1438,6 @@ p {
 					font-size: 1.25em;
 					font-weight: 800;
 					color: @color_1;
-					background-color: @color_4;
 					&:hover {
 						background-color: @color_1;
 						color: @color_4;
